--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Interest Amount</title>
 </head>
 <body>
+    <label for="amount">Amount:</label>
+    <input type="number" id="amount">
+    <br>
+    <label for="interest">Interest (%):</label>
+    <input type="number" id="interest">
+    <br>
+    <button id="calculate">Calculate</button>
+    <div id="output"></div>
     <script src="./script/code.js"></script>
 </body>
 </html>
