--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Interest Amount</title>
 </head>
 <body>
-    <label for="amount">Amount:</label>
+    <label for="amount" id="label">Amount:</label>
     <input type="number" id="amount">
     <br>
-    <label for="interest">Interest (%):</label>
+    <label for="interest" id="label">Interest (%):</label>
     <input type="number" id="interest">
     <br>
     <button id="calculate">Calculate</button>
