final changes added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Interest Amount</title>
 </head>
 <body>
+    <h1>Interest Amount</h1>
     <label for="amount" id="label">Amount:</label>
     <input type="number" id="amount">
     <br>
